--- a/src/main/resources/base/solver_ui.ui
+++ b/src/main/resources/base/solver_ui.ui
@@ -28,7 +28,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QSpinBox" name="spinBox">
+       <widget class="QSpinBox" name="capacity_1_spinbox">
         <property name="maximum">
          <number>1000000000</number>
         </property>
@@ -45,7 +45,7 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QSpinBox" name="spinBox_2">
+       <widget class="QSpinBox" name="capacity_2_spinbox">
         <property name="maximum">
          <number>1000000000</number>
         </property>
@@ -75,7 +75,7 @@
        </widget>
       </item>
       <item row="0" column="4" rowspan="2">
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="solve_button">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
           <horstretch>0</horstretch>
@@ -99,14 +99,14 @@
        </widget>
       </item>
       <item row="0" column="3">
-       <widget class="QSpinBox" name="spinBox_3">
+       <widget class="QSpinBox" name="starting_1_spinbox">
         <property name="maximum">
          <number>1</number>
         </property>
        </widget>
       </item>
       <item row="1" column="3">
-       <widget class="QSpinBox" name="spinBox_4">
+       <widget class="QSpinBox" name="starting_2_spinbox">
         <property name="maximum">
          <number>1</number>
         </property>
@@ -117,9 +117,9 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
-       <widget class="QTabWidget" name="tabWidget">
+       <widget class="QTabWidget" name="tab_widget">
         <property name="currentIndex">
-         <number>0</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="tab">
          <attribute name="title">
@@ -127,7 +127,7 @@
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <widget class="QTableWidget" name="tableWidget">
+           <widget class="QTableWidget" name="solution_table">
             <column>
              <property name="text">
               <string>1</string>
@@ -153,7 +153,7 @@
          </attribute>
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
-           <widget class="QPlainTextEdit" name="plainTextEdit">
+           <widget class="QPlainTextEdit" name="solution_text">
             <property name="font">
              <font>
               <family>Consolas</family>
@@ -189,7 +189,10 @@ df
        </widget>
       </item>
       <item>
-       <widget class="QWidget" name="widget" native="true">
+       <widget class="QWidget" name="solution_area" native="true">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <layout class="QVBoxLayout" name="verticalLayout_5">
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
@@ -207,7 +210,7 @@ df
             </spacer>
            </item>
            <item>
-            <widget class="QToolButton" name="toolButton">
+            <widget class="QToolButton" name="step_back_button">
              <property name="text">
               <string>...</string>
              </property>
@@ -217,7 +220,7 @@ df
             </widget>
            </item>
            <item>
-            <widget class="QToolButton" name="toolButton_2">
+            <widget class="QToolButton" name="step_forward_button">
              <property name="text">
               <string>...</string>
              </property>
@@ -239,7 +242,7 @@ df
               </widget>
              </item>
              <item>
-              <widget class="QSpinBox" name="spinBox_5">
+              <widget class="QSpinBox" name="step_spinbox">
                <property name="maximum">
                 <number>1000</number>
                </property>
@@ -287,10 +290,23 @@ df
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_3">
              <item>
-              <widget class="QProgressBar" name="progressBar">
+              <spacer name="verticalSpacer">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QProgressBar" name="container_1_bar">
                <property name="sizePolicy">
-                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                 <horstretch>0</horstretch>
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+                 <horstretch>1</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
                </property>
@@ -312,7 +328,7 @@ df
               </widget>
              </item>
              <item>
-              <widget class="QLabel" name="label_5">
+              <widget class="QLabel" name="container_1_label">
                <property name="text">
                 <string>0/0</string>
                </property>
@@ -326,9 +342,22 @@ df
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_4">
              <item>
-              <widget class="QProgressBar" name="progressBar_2">
+              <spacer name="verticalSpacer_2">
+               <property name="orientation">
+                <enum>Qt::Vertical</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>20</width>
+                 <height>40</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QProgressBar" name="container_2_bar">
                <property name="sizePolicy">
-                <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
@@ -351,7 +380,7 @@ df
               </widget>
              </item>
              <item>
-              <widget class="QLabel" name="label_6">
+              <widget class="QLabel" name="container_2_label">
                <property name="text">
                 <string>0/0</string>
                </property>
@@ -397,7 +426,7 @@ df
          <item>
           <layout class="QHBoxLayout" name="horizontalLayout_5">
            <item>
-            <widget class="QPushButton" name="pushButton_2">
+            <widget class="QPushButton" name="play_solution_button">
              <property name="text">
               <string>Play through solution</string>
              </property>
@@ -414,7 +443,7 @@ df
             </widget>
            </item>
            <item>
-            <widget class="QSpinBox" name="spinBox_6">
+            <widget class="QSpinBox" name="steprate_spinbox">
              <property name="maximum">
               <number>5000</number>
              </property>
@@ -432,17 +461,6 @@ df
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>983</width>
-     <height>26</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
