--- a/src/main/resources/base/solver_ui.ui
+++ b/src/main/resources/base/solver_ui.ui
@@ -177,6 +177,9 @@
               <pointsize>10</pointsize>
              </font>
             </property>
+            <property name="readOnly">
+             <bool>true</bool>
+            </property>
             <property name="plainText">
              <string/>
             </property>
@@ -412,7 +415,7 @@
           </widget>
          </item>
          <item>
-          <widget class="QLabel" name="label_9">
+          <widget class="QLabel" name="step_description_label">
            <property name="text">
             <string>Description of step...</string>
            </property>
